[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmwrapper"
version = "1.0.0"
description = "A vendor-agnostic Python wrapper for interacting with multiple Large Language Models (LLMs)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["llm", "openai", "anthropic", "gemini", "grok", "ai", "chatgpt", "claude", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.3.11",
    "google-genai>=0.1.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llmwrapper"
Documentation = "https://github.com/yourusername/llmwrapper#readme"
Repository = "https://github.com/yourusername/llmwrapper"
Issues = "https://github.com/yourusername/llmwrapper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llmwrapper*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
llmwrapper = ["*.json"] 